# talkland

./: .antigravityrules  .gitignore  README.md  RENDER_DEPLOY.md  build_log.txt  check_enums.py  check_far.py  check_far_events.py  check_flet_80.py  flet.yaml  flet_attrs.txt  flutter.js.map  flutter_bootstrap.js  flutter_service_worker.js  fly.toml  index.html  inspect_flet.py  inspect_flet_2.py  inspect_start.py  main.dart.mjs  main.py  manifest.json  pyproject.toml  render.yaml  requirements-desktop.txt  requirements.txt  run_log.txt  server.py  talkland 개발 계획서.txt  test_desktop_speech.py  verify_error_handling.py  verify_fix.py  verify_new_far.py
.agent/workflows/: build-android.md  commit.md  dev.md  full-pipeline.md
.github/workflows/: build-apk.yml  deploy-web.yml
app/: settings_config.py  settings_manager.py
app/speech/: android_speech_backend.py  desktop_speech_backend.py  dummy_speech_backend.py  speech_backend.py  speech_backend_factory.py  tts_play.py  web_js_backend.py  web_speech_backend.py
app/speech/web/: web_speech.js
app/text/: accuracy.py  compare.py  normalize.py  translate.py
app/ui/: mode1.py  mode2.py  settings_dialog.py
assets/: NOTICES
docs/: architecture.md
knowledge_base/: build_config_reference.md  flet_android_guide.md  flet_research_report.md
pyodide/: micropip-0.8.0-py3-none-any.whl
static/: auto-save.js  db.js  manifest.json  mode2.js  sw.js
templates/: index.html
