[project]
name = "talkland"
version = "0.1.0"
description = "TalkLand - Language Learning App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet==0.25.2",
    "deep-translator",
    "SpeechRecognition"
]

[tool.setuptools.packages.find]
include = ["app*"]


[tool.flet]
platforms = ["android"]

[tool.flet.android]
permissions = ["android.permission.RECORD_AUDIO", "android.permission.INTERNET"]




